# accta

./: .gitignore  README.md  pyproject.toml
accta/: __init__.py  ostia.py  pipeline.py
accta/aorta/: __init__.py  centerline.py  segment.py
accta/api/: __init__.py  cancellation.py  config.py  main.py  schemas.py  session.py
accta/api/routers/: __init__.py  algorithms.py  browse.py  config.py  mpr.py  slices.py  studies.py  volumes.py
accta/edit/: __init__.py  ops.py  undo.py
accta/io/: __init__.py  dicom.py  persistence.py
accta/labeling/: __init__.py  manual.py
accta/pipeline/: cache.py
accta/preprocess/: __init__.py  blood_pool.py  denoise.py  lung_mask.py  masks.py  quality.py  resample.py
accta/tree/: __init__.py  branch_search.py  graph.py  label_image.py  refine.py  skeleton.py
accta/ui/: __init__.py  app.py  mpr.py
accta/vesselness/: __init__.py  combine.py  cost.py  geometric.py  hessian.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AxialPanel.tsx  BrowseModal.tsx  CrossSectPanel.tsx  CurvedMPRPanel.tsx  MPRPanel.tsx  MiniGame.tsx  MultiObliquePanel.tsx  OrthoPanel.tsx  SeriesPickerModal.tsx  Session.tsx  SlicePanel.tsx  Toolbar.tsx  UploadStudy.tsx  Viewer.tsx  VolumePanel.tsx  Worklist.tsx
frontend/src/hooks/: useStudy.ts  useStudyTypes.ts
scripts/: start-accta.applescript
tests/: conftest.py  test_aorta.py  test_io.py  test_preprocess.py  test_vesselness.py
(+9 files in other folders)
