[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accta"
version = "0.1.0"
description = "Coronary CTA centerline extraction research toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "SimpleITK>=2.3",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "vtk>=9.3",
    "networkx>=3.2",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.32",
    "matplotlib>=3.7",
]
api = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "streamlit>=1.32",
    "matplotlib>=3.7",
]

[project.scripts]
accta-viewer = "accta.ui:run_viewer"
accta-api = "accta.api:run_server"

[tool.hatch.build.targets.wheel]
packages = ["accta"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
